; ModuleID = '/home/carl/AnghaBench/openssl/crypto/rsa/extr_rsa_ameth.c_old_rsa_priv_decode.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/rsa/extr_rsa_ameth.c_old_rsa_priv_decode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32 }

@RSA_F_OLD_RSA_PRIV_DECODE = common dso_local global i32 0, align 4
@ERR_R_RSA_LIB = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_6__*, i8**, i32)* @old_rsa_priv_decode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @old_rsa_priv_decode(%struct.TYPE_6__* %0, i8** %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_6__*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %5, align 8
  store i8** %1, i8*** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i8**, i8*** %6, align 8
  %10 = load i32, i32* %7, align 4
  %11 = call i32* @d2i_RSAPrivateKey(i32* null, i8** %9, i32 %10)
  store i32* %11, i32** %8, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %17

13:                                               ; preds = %3
  %14 = load i32, i32* @RSA_F_OLD_RSA_PRIV_DECODE, align 4
  %15 = load i32, i32* @ERR_R_RSA_LIB, align 4
  %16 = call i32 @RSAerr(i32 %14, i32 %15)
  store i32 0, i32* %4, align 4
  br label %26

17:                                               ; preds = %3
  %18 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %19, i32 0, i32 0
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load i32*, i32** %8, align 8
  %25 = call i32 @EVP_PKEY_assign(%struct.TYPE_6__* %18, i32 %23, i32* %24)
  store i32 1, i32* %4, align 4
  br label %26

26:                                               ; preds = %17, %13
  %27 = load i32, i32* %4, align 4
  ret i32 %27
}

declare dso_local i32* @d2i_RSAPrivateKey(i32*, i8**, i32) #1

declare dso_local i32 @RSAerr(i32, i32) #1

declare dso_local i32 @EVP_PKEY_assign(%struct.TYPE_6__*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
